--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -96,7 +96,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:text="Buscar"/>
+                    android:hint="Buscar"/>
 
                 <ImageButton
                     android:id="@+id/searchIcon"
@@ -131,7 +131,5 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
         tools:layout="@layout/fragment_bottom_nav" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
