--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,39 +20,36 @@
         app:layout_constraintEnd_toEndOf="parent">
     </fragment>
 
-    <TextView
+    <LinearLayout
+        app:layout_constraintTop_toBottomOf="@id/NavBar"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBaseline_toTopOf="parent"
-        android:gravity="center"
-        android:paddingTop="190dp"
-        android:layout_marginTop="100dp"
-        android:textSize="50sp"
-        android:text="@string/Login" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="50dp"
         android:gravity="center"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="20dp">
+        android:layout_marginHorizontal="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:layout_marginBottom="50dp"
+            android:text="@string/Login" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="@string/email" />
+            android:text="@string/username" />
 
         <EditText
             android:id="@+id/editTextTextEmailAddress"
             android:layout_width="match_parent"
-            android:hint="@string/value_mail_ex"
+            android:hint="@string/example"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginVertical="10dp"
             android:ems="10"
             android:inputType="textEmailAddress" />
 
@@ -60,6 +57,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:textSize="20sp"
             android:text="@string/password" />
 
@@ -68,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/xxxxxxxxxxxxxx"
-            android:layout_margin="10dp"
+            android:layout_marginVertical="10dp"
             android:ems="10"
             android:inputType="textPassword" />
 
@@ -86,7 +84,7 @@
             android:id="@+id/registre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="15dp"
             android:padding="10dp"
             android:textSize="20sp"
             android:text="@string/no_tens_compte"
@@ -95,6 +93,7 @@
     </LinearLayout>
 
     <fragment
+        android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:name="com.ericandpau.pokeshopk.BottomNav"
