--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,7 +96,38 @@
             android:ems="10"
             android:inputType="textEmailAddress" />
 
-        <!-- Telèfon -->
+        <!-- PSWD -->
+        <TextView
+            android:id="@+id/textViewPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@string/cognom" />
+
+        <EditText
+            android:id="@+id/editTextPswd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text" />
+
+        <!-- Confirmació PSWD -->
+        <TextView
+            android:id="@+id/textViewPswdConf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Contrassenya" />
+
+        <EditText
+            android:id="@+id/editTextPswdConf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="Repeteix la contrassenya" />
+
+        <!-- Telefon -->
         <TextView
             android:id="@+id/textViewTelefon"
             android:layout_width="match_parent"
@@ -181,7 +212,7 @@
         android:id="@+id/textViewStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registre completat !"
+        android:text="Registre completat!"
         android:paddingTop="150dp"
         android:paddingLeft="100dp"
         android:textSize="50sp"
